test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/tag_def_conflicts_with_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  struct
  identifier(s)
  ;
  return
  const int(0)
  ;
  }
